# github-stats

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Containerfile  Dockerfile  Justfile  README.md  compose.yaml  compose.yaml.example  renovate.json  syslog-ng.conf
.github/: dependabot.yml
.github/workflows/: ci-test.yml  ci.yml  release.yml
src/: card.rs  github.rs  icons.rs  language_colors.rs  logger.rs  main.rs  stats.rs  themes.rs  toplangs.rs
static/: 404.html
