[package]
name = "github-stats"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-governor = "0.8.0"
actix-web = "4"
anyhow = "1.0.96"
config = "0.15.8"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = { version = "0.4.25" }
mime = "0.3.17"
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
