[package]
name = "github-stats"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-files = "0.6.8"
actix-governor = "0.10.0"
actix-web = "4"
anyhow = "1.0.100"
config = "0.15.18"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = { version = "0.4.28" }
mime = "0.3.17"
reqwest = { version = "0.13.1", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
