[package]
name = "github-stats"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-governor = "0.10"
actix-web = "4"
anyhow = "1"
config = "0.15"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
mime = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "webpki-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
